k8s/core/ingress-nginx/extra/base/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-http-https
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
